--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -93,7 +93,7 @@ implementieren k"onnen -- ist letzteres auf den ersten Blick ein merkw"urdiges
 Ziel. Die Eigenschaft ist jedoch vor allem f"ur Passwort-Hash-Funktionen
 relevant. Um zu verhindern dass ein Angreifer m"oglichst schnell alle m"oglichen
 Passw"orter vorberechnet (wie wir es in dieser Arbeit tun), m"ochte man in
-diesem Fall eine Hashfunktion, welche aufw"andig und ressourcenintensiv zu
+diesem Fall eine Hashfunktion, welche aufwendig und ressourcenintensiv zu
 berechnen ist.
 
 \subsection{MD5}
@@ -344,7 +344,7 @@ Buchstaben des Wortes in Dreiergruppen aufteilt (Sliding Window Algorithmus).
 \end{figure}
 
 % TODO danilo: Beispiel-Tabelle
-% Bemerkung lukas: hier wäre allenfalls das Wort Kernel wirklich angebracht;
+% Bemerkung lukas: hier w"are allenfalls das Wort Kernel wirklich angebracht;
 % Was im Stil: ``Der OpenCL Kernel sieht somit folgendermassen aus:''
 
 \noindent In OpenCL C sieht das folgendermassen aus:
@@ -397,7 +397,7 @@ Wie in der Einleitung im Abschnitt \ref{crypto:keyspace} bereits erl"autert
 wurde, ergeben sich beim Zeichensatz \texttt{[a-zA-Z0-9]} und einer Wortl"ange
 von 8 Zeichen mehr als 200 Billionen ($2 * 10^{12}$) m"ogliche Kombinationen.
 Dieser Problemgr"osse stehen aber auf einem System mit einem Intel Core i5-3320M
-Prozessor, 8GB RAM und in einer OpenCL Workgroup gemäss dem OpenCL Standard
+Prozessor, 8GB RAM und in einer OpenCL Workgroup gem"ass dem OpenCL Standard
 theoretisch maximal
 
 \[
@@ -417,9 +417,9 @@ Genau um diese Grenzen soll es in diesem Abschnitt gehen. Es soll dabei nicht
 ersch"opfend auf die Grenzen von OpenCL oder auf alle Spezifikas der
 Implementierungen eingegangen, sondern vielmehr f"ur das Thema sensibilisiert
 werden. Es sollen m"ogliche Ans"atze f"ur den Umgang mit grossen Problemen in
-OpenCL aufgezeigt werden, was hoffentlich dazu f"uhren wird, dass der Leser /
-die Leserin ein Gesp"ur f"ur eigene, auf die spezifische Hardware und
-Implementierung zugeschnittene Ans"atze entwickeln kann.
+OpenCL aufgezeigt werden, was hoffentlich dazu f"uhren wird, dass der Leser ein
+Gesp"ur f"ur eigene, auf die spezifische Hardware und Implementierung
+zugeschnittene Ans"atze entwickeln kann.
 
 
 \subsection{Grenzen von OpenCL}
@@ -539,16 +539,17 @@ Datatypes:
 
 
 \begin{description}
- \item [Version] Implementierte bzw. Unterst"utzte OpenCL Version
- \item [Profile] \texttt{full} oder \texttt{embedded} (in OpenCL 1.2)
- \item [Type]    \texttt{CPU}, \texttt{GPU} oder \texttt{ACCELERATOR}
+ \item [Version] Implementierte bzw. Unterst"utzte OpenCL Version.
+ \item [Profile] \texttt{full} oder \texttt{embedded} (in OpenCL 1.2).
+ \item [Type]    \texttt{CPU}, \texttt{GPU} oder \texttt{ACCELERATOR}.
  \item [Compute Units] Anzahl der physisch vorhandenen Compute Units. Dies ist
-                 die Anzahl effektiv parallel ausgef"uhrten Workitems
- \item [Max work group size] Maximale Anzahl Workitems in einer Workgroup
- \item [Max work item dim.] Maximale direkt im Workitem bearbeitbare Dimensionen, minimal 1, maximal 3
+                 die Anzahl effektiv parallel ausgef"uhrten Workitems.
+ \item [Max work group size] Maximale Anzahl Workitems in einer Workgroup.
+ \item [Max work item dim.] Maximale direkt im Workitem bearbeitbare
+	 Dimensionen, minimal 1, maximal 3.
  \item [Max work item size] Maximale Anzahl von Workitems in einer Workgroup nach
                  Dimensionen (Ist je nach Ger"at unterschiedlich in den verschiedenen
-                 Dimensionen)
+                 Dimensionen).
  \item [Preferred vector size] (F"ur jeden unterst"utzten Datentyp) Vektorgr"osse, 
                  die von der Hardware f"ur den jeweiligen Typ direkt (also sprich in einer 
                  Instruktion) verarbeitet werden kann.
@@ -560,9 +561,10 @@ Datatypes:
 Spezifikation\cite{crypto:opencl_ref} folgende Regeln:
 
 \begin{itemize}
- \item Eine Workgroup kann nur auf einer Compute Unit ausgef"uhrt werden (1 Workgrooup = 1 
+ \item Eine Workgroup kann nur auf einer Compute Unit ausgef"uhrt werden (1 Workgroup = 1 
        Compute Device). Das heisst, pro Compute Unit muss eine Workgroup erstellt werden.
- \item Die Anzahl der Workitems pro Workgroup darf insgesamt 8192 nicht "ubersteigen (global work size)
+ \item Die Anzahl der Workitems pro Workgroup darf insgesamt 8192 nicht
+	 "ubersteigen (Global Work Size).
  \item Dabei d"urfen die in ``Max work item size'' angegebenen Werte in der jeweiligen 
        Dimension nicht "uberstiegen werden (local work size $[x,y,z,\ldots]$).
 			 Die Summe $x + y + z$ darf dabei insgesamt nicht gr"osser werden als ``Max work group size''.
@@ -572,191 +574,105 @@ Spezifikation\cite{crypto:opencl_ref} folgende Regeln:
 
 
 \subsubsection {Maximale Problemgr"osse im 3-Dimensionalen Raum}
+\label{crypto:problemgroesse:3d}
 
-Das t"ont zwar schon mal nach einiger Gr"osse, doch soll ein kleines Beispiel
-demonstrieren, dass die Grenzen schneller erreicht sind als man denkt.
+Die zur Verf"ugung stehende Rechenleistung klingt zun"achst f"ur fast jedes Problem
+ausreichend, doch soll ein kleines Beispiel demonstrieren, dass die Grenzen
+schneller erreicht sind als man denkt.
 
 Wir nehmen an, eine 3D-Simulation zu machen, in der sich das gesamte
-Simulationsproblem in lauter kleine W"urfel aufteilen lässt (Beispiele f"ur diese
-Anwendung gibt es viele: Str"omungssimulationen, Verformungen bei Krafteinwirkung,
-Wetterberechnung um drei davon zu nennen). Dabei nehmen wir an, dass f"ur unser 
-Problem eine Unterteilung des Raums $1 mm^{3}$ W"urfelchen, von denen in jedem 
-Iterationsschritt der Zustand in jeweils einem Workitem neu berechnet werden soll, 
-gen"ugt.
+Simulationsproblem in lauter kleine W"urfel aufteilen l"asst
+(Anwendungsbeispiele hierf"ur gibt es viele, wie z.~B. Str"omungssimulationen,
+Verformungen bei Krafteinwirkung oder Wetterberechnungen). Dabei nehmen wir an,
+dass f"ur unser Problem eine Unterteilung des Raumes in $1\textrm{ mm}^{3}$
+W"urfel gen"ugt. Dabei soll in jedem Iterationsschritt der Zustand in jeweils
+einem Workitem neu berechnet werden.
 
-Als erste berechnen wir das maximal so simulierbare Volumen mit einer Workgroup.
-Da die Gesamtzahl der Workitems in einer Workgroup f"ur das aktuelle Beispiel
-8192 nicht "uberschreiten darf, k"onnen maximal
+Zuerst berechnen wir das maximal so simulierbare Volumen mit einer einzelnen
+Workgroup.  Da die Gesamtzahl der Workitems in einer Workgroup f"ur das aktuelle
+Beispiel 8192 nicht "uberschreiten darf, k"onnen maximal
 
 \[
  n = \left\lfloor\sqrt[3]{8192}\right\rfloor = \left\lfloor20.159\right\rfloor = 20
 \]
 
-Qu"aderchen pro Dimension berechnet werden. Das entspricht einem W"urfel von 
-$2x2x2 cm^{3}$, was uns in den meisten F"allen noch nicht sonderlich weit bringt.
+\noindent W"urfel pro Dimension berechnet werden. Das entspricht einem W"urfel von 
+$2\textrm{ cm}^{3}$, was uns in den meisten F"allen noch nicht sonderlich weit bringt.
 
-Angenommen wir erweitern nun die Zahl der Workgroups nach demselben Schema,
-das heisst jede Workgroup berechnet einen $2x2x2 cm^{3}$ W"urfel, so entspricht
-das bei einer maximalen Workgroupzahl von 8192 nochmals 20 W"urfeln in jede 
-Dimension. Somit k"onnten wir f"ur die oben genannte Implementation in einem
-Anwurf der OpenCL Maschine einen W"urfel von $40x40x40 cm^{3}$ berechnen. Auch
-diese Zahl ist noch nicht sonderlich berauschend. 
+Angenommen wir erweitern nun die Zahl der Workgroups nach demselben Schema --
+d.~h. jede Workgroup berechnet einen $2\textrm{ cm}^{3}$ W"urfel -- so
+entspricht das bei einer maximalen Workgroupzahl von 8192 zwanzig solcher
+W"urfeln in jede Dimension. Somit k"onnten wir f"ur die oben genannte
+Implementation in einem Berechnungsdurchgang von OpenCL einen W"urfel von
+$40\textrm{ cm}^{3}$ berechnen. Auch diese Zahl ist noch nicht sonderlich
+berauschend. 
 
-
-% TODO MURL: fix that one
-Im folgenden soll nun gezeigt werden, wie das Problem so angepasst werden kann, 
-dass die Berechnung nicht f"ur alle $64'000 cm^{3}$ neu angeworfen werden muss.
-
-\subsubsection{Maximale Problemgr"osse am Beispiel MD5 Cracking}
-
-Am Beispiel des MD5-Crackings soll mit einer kurzen Beispielrechnung gezeigt
-werden, wie man das Problem in kleinere Teilprobleme trennen kann, welche dann
-der Hardware auch "uebergebenwerden k"onnen.
-
-Dazu treffen wir folgende Annahmen:
-
-\begin{itemize}
- \item Wir arbeiten auf einem Device und mit einer Workgroup
- \item Der Zeichensatz soll auf [a-z] beschr"ankt sein
-\end{itemize}
-
-Die Fragestellung f"ur dieses konkrete Beispiel ist: ``Wie 
-lange kann unser String werden, bevor wir weitere Massnahmen
-ergreifen m"ussten?''
-
-F"ur den Keyspace erhalten wir somit folgende Werte:
-\begin{center}
-\begin{tabular}{|>{$}c<{$}|>{$}c<{$}|}
-\hline
- \text{Stellenzahl}&\text{Keyspace}\\
-\hline
-  5 & 1.188 * 10^7 \\
-  6 & 3.089 * 10^8 \\
-  7 & 8.031 * 10^9 \\
-  8 & 2.088 * 10^{11} \\
-  9 & 5.429 * 10^{12} \\
-\hline
-\end{tabular}
-\end{center}
-
-Demgegen"uber stehen die maximale Anzahl Workitems pro Workgroup, f"ur
-den bereits vorgestellten Intel Core i5 sind dies 8192. Wie bereits im
-Kaptiel \ref{crypto:loesungsansatz} beschrieben, verwenden wir die 
-Dimension f"ur die Bestimmung des Strings:
-
-\[
-  N_{Strings} = 8192^3 = 5.498*10^{9}
-\]
-
-Abgesehen davon, dass gewisse Implementationen die Gesamtzahl der 
-Workitems Dimensionsunabh"angig auf einen kleineren Wert als  $8192^3$
-legen, heisst das, dass die MD5-Berechnung eines Strings mit dem eher 
-praxisfernen Zeichensatz [a-z] bereits nach einer L"ange von nur
-7 Zeichen zu einem Problem wird, welches so gross ist, dass es weiter
-aufgeteilt werden muss. Bei einer Zeichensatzgr"osse
-von $[a-zA-Z0-9] = 62$ Zeichen "ubersteigt das Problem bereits bei 6
-Zeichen ($62^6 = 5.680 * 10^{10}$) deutlich diese Gr"osse.
-
-Wird nun die maximale Gr"osse der Dimension mit in die Betrachtung
-integriert, "ubersteigt bereits $26^3 = 17'576$ die Maximal zul"assige
-Dimensionsgr"osse von $8192$ bei unserer Beispielimplementation. Das heisst,
-effektiv kann durch diese Beschr"ankung sogar nur ein $[26^2, 26^2, 26^2] = 6$ 
-Zeichen langer String in einer Workgroup gepr"uft werden, beziehungsweise bei 
-beachtung der Grenze von nur maximal $8192$ Workitems in der gesamten Workgroup 
-sogar nur $26^2 = 2$ Zeichen (f"ur die genannte Beispielimplementation).
-
-In diesem Fall war die maximale Zahl der Workitems pro Workgroup der limitierende 
-Faktor. Es kann durchaus auch sein, dass die Maximalzahl der Workitems nicht 
-"uberschritten wird, aber die Dimensionszahl bereits gr"osser als die maximal
-zugelassene Gr"osse wird (siehe dazu die Beschreibung zu den Hardwaremerkmalen).
-Das heisst, die zwei Punkte ``Maximale Anzahl Workitems pro Workgroup'' und 
-``Maximale Dimensionsgr"osse'' m"ussen als zwei unabh"angige Limitierungsfaktoren
-betrachtet werden, welche beide eingehalten werden m"ussen.
-
-Verschiedene Implementationen behandeln eine "Uberschreitung der einzelnen
-Faktoren durchaus unterschiedlich. W"ahrend
-die Intel Implementation Dimensionen gr"osser als die eigentlich deklarierte
-Maximalgr"osse von $8192$ pro Dimension zul"asst, beendet sich die Nvidia 
-Implementation mit einem ``Out-of-Resources'' Fehler, sobald in einer Richtung 
-die Maximalanzahl von $8192$ "uberschritten wird. Das genaue Verhalten der
-jeweils verwendeten Implementation sollte vorg"angig abgekl"art oder
-zumindest ausprobiert werden. 
-
+Im Folgenden soll nun gezeigt werden, wie das Problem so aufgeteilt werden kann,
+dass die Berechnung trotz der enormen Problemgr"osse noch durchgef"uhrt werden
+k"onnen.
 
 \subsection{Aufteilung von grossen Problemen}
 
-In diesem Kapitel werden einige Techniken beschrieben, mit denen ein 
-grosses Problem weiter portioniert werden kann, so dass es in die 
-Hardware und die Implementierung ``passt''. 
-Denn wie im letzten Kapitel aufgezeigt wurde sollte man sp"atestens dann
-beginnen sich Gedanken zur Problemgr"osse zu machen, wenn die 
-Grenzen der Hardware erreicht sind. Es lohnt sich aber trotzdem, wie in diesem 
-Kapitel auch gezeigt werden soll, auch bei ``kleineren'' grossen Problemen
-welche noch nicht an die Grenzen der Hardware stossen, sich Gedanken
-"uber eine m"oglichst effektive Aufteilung des Problems zu machen, so
-dass die vorhandenen Ressourcen optimal  ausgenutzt werden k"onnen.
-
-Speziell soll dabei auf die folgenden Techniken eingegangen werden:
+Sp"atestens wenn die Grenzen der Hardware erreicht sind, sollte man sich
+Gedanken zur besseren Aufteilung eines Problemes machen. Es lohnt sich aber
+bereits bei ``kleineren'' grossen Problemen, welche noch nicht an die Grenzen
+der Hardware stossen, diese m"oglichst effektiv aufzuteilen, so dass die
+vorhandenen Ressourcen optimal ausgenutzt werden k"onnen.  In diesem Kapitel
+werden daher die folgenden vier Techniken vorgestellt:
 
 \begin{itemize}
  \item Mehrere Workgroups verwenden
- \item Virtuelle Dimensionsvergr"osserung
- \item Mehr als eine Berechnung pro Kernel
- \item Mehrfacher, parametrisierter ``Anwurf'' der OpenCL Maschine
+ \item Virtuelle Dimensionserweiterung
+ \item Mehr als eine Berechnung pro Workitem
+ \item Mehrfacher, parametrisierter Start des OpenCL Kernels
 \end{itemize}
 
-Dazu ist anzumerken, dass hier auf diejenigen Techniken eingegangen
-wird, die auch im Zuge der Implementierung des MD5-Cracking Projekts
-ausprobiert oder evaluiert wurden. Das heisst, die Liste erhebt weder
-die den Anspruch auf Vollst"andigkeit noch auf die Brauchbarkeit f"ur
-ein spezielles Problem. Wir hoffen aber, dem Leser ein paar Ideen
-in die Hand zu geben, wie er seine eigenen Anwendungen weiter optimieren 
-kann.
-
+Dazu ist anzumerken, dass hier auf diejenigen Techniken eingegangen wird, die
+auch im Zuge der Implementierung des MD5-Cracking Projekts ausprobiert oder
+evaluiert wurden. Die Liste erhebt weder die den Anspruch auf Vollst"andigkeit,
+noch ist sie f"ur jedes spezielle Problem anwendbar. Wir hoffen aber, dem Leser
+ein paar Ideen in die Hand zu geben, wie er seine eigenen Anwendungen weiter
+optimieren kann.
 
 \subsubsection{Mehrere Workgroups verwenden}
 
-In den bisherigen Beispielen wurde meist davon ausgegangen,
-dass nur eine Workgroup verwendet wird. In der Praxis besitzt jeder
-moderne Desktop-Computer mindestens zwei OpenCL-f"ahige Ger"ate, 
-namentlich die CPU und die GPU, welche wiederum ein bis \ldots Compute
-Devices, sprich real parallel laufende Rechenkerne umfassen.
+In den bisherigen Beispielen wurde meist davon ausgegangen, dass nur eine
+Workgroup verwendet wird. In der Praxis besitzt jeder moderne Desktop-Computer
+mindestens zwei OpenCL-f"ahige Ger"ate, namentlich die CPU und die GPU, welche
+wiederum ein oder mehrere Compute Devices -- real parallel laufende Rechenkerne
+-- umfassen.
 
-Genau hier kommt das Thema ``Mehrere Workgroups'' ins Spiel, denn
-eine Workgroup kann jeweils nur auf einem Compute Device laufen. Will man also
-nicht nur einen Prozessor der modernen Multicore-CPUs \textit{oder}
-eine Recheneinheit der Grafikkarte verwenden, sondern die CPU \textit{und} 
-die Grafikkarte voll ausnutzen, m"ussen unabh"angig
-von der Problemgr"osse mehrere Workgroups erzeugt werden.
+Genau hier kommt das Thema ``Mehrere Workgroups'' ins Spiel, denn eine Workgroup
+kann jeweils nur auf einem Compute Device laufen. Will man also nicht nur einen
+Prozessor \textit{oder} eine Recheneinheit der Grafikkarte verwenden, sondern
+die CPU \textit{und} die Grafikkarte voll ausnutzen, m"ussen unabh"angig von der
+Problemgr"osse mehrere Workgroups erzeugt werden.
 
-Wie wir bereits gesehen haben, kann mit den Workgroups die Anzahl der 
-verarbeitbaren Workitems  pro ``Anwurf'' der OpenCL-Maschine bereits
-deutlich erh"oht werden. Darauf wird im Punkt ``Mehrfacher, parametrisierter
-``Anwurf'' der OpenCL Maschine'' weiter unten noch deutlich eingegangen. 
-Hierzu ist anzumerken, dass je nach Implementation und 
-verwendeten Frameworks die Aufteilung in Workgroups auch automatisch
-vorgenommen wird, wenn nichts explizit angegeben wurde.
+Wie bereit im Abschnitt \ref{crypto:problemgroesse:3d} erl"autert, kann mit den
+Workgroups die Anzahl der verarbeitbaren Workitems pro Berechnungsdurchgang der
+OpenCL-Maschine bereits deutlich erh"oht werden. Je nach Implementation und
+verwendeten Frameworks wird die Aufteilung in Workgroups sogar automatisch
+vorgenommen, wenn nichts explizit angegeben wurde. M"ochte man aber die
+vorhandene Hardware optimal ausnutzen und dabei ber"ucksichtigen, dass die
+Compute Devices nicht alle gleich schnell rechnen, kommt man nicht darum herum
+sich selbst Gedanken "uber die Aufteilung in Workgroups zu machen.
 
-M"ochte man aber die vorhandene Hardware optimal ausnutzen und dabei
-in betracht ziehen, dass die Compute Devices nicht alle gleich schnell
-rechnen, kommt man nicht darum herum sich selbst Gedanken "uber die
-Aufteilung in Workgroups zu machen. Die Herausforderung dabei ist, 
-die Anzahl der Workitems so via die Workgroups auf die Compute Devices
-zu verteilen, dass die Berechnungen abarbeitung der jeweiligen Workgroup
-auf allen Compute Devices ungef"ahr "anhlich lange dauert. Dabei geht es 
-nicht um Minuten, es kann durchaus sein, dass 
-die Portion welche auf der GPU gerechnet wurde, nach 30 Minuten bereits
-fertig ist, diejenige, welche die CPU "ubernimmt aber 3 Stunden dauert.
-Da die OpenCL Spezifikation keinen Abbruch oder eine Neuverteilung zul"asst,
-bevor nicht alle Workgroups fertig gelaufensind, ist die GPU also 2.5 Stunden 
-unbesch"aftigt rumgestanden. Hier empfiehlt es sich bei unbekannter Hardware 
-mit kleinen Portionen zu beginnen, die Durchlaufzeiten zu messen und erst dann 
-zu Entscheiden, wie die weitere Aufteilung aussehen soll. Um eine gute 
-Aussagekraft zu erhalten, sollten die ersten Portionen auch nicht zu klein sein,
-irgendwo zwischen 10-100 Berechnungen auf jedem Compute Device sollten die meisten 
-Unw"agbarkeiten ausb"ugeln. Dabei kann durchaus auch Iterativ vorgegangen 
-werden, um eine m"oglichst optimale Aufteilung zu erreichen und der Ansatz ist
-auch leicht automatisierbar.
+Die Herausforderung dabei ist, die Anzahl der Workitems so "uber die Workgroups
+auf die Compute Devices zu verteilen, dass die Berechnungen der jeweiligen
+Workgroup auf allen Compute Devices ungef"ahr "ahnlich lange dauert.  Dabei geht
+es nicht lediglich um Sekunden; es kann durchaus sein dass die Portion, welche
+auf der GPU gerechnet wurde, nach 30 Minuten bereits fertig ist, w"ahrend
+diejenige der CPU 3 Stunden dauert. Da die OpenCL Spezifikation keinen Abbruch
+oder eine Neuverteilung zul"asst, bevor nicht alle Workgroups fertig gelaufen
+sind, ist die GPU in diesem Fall also 2.5 Stunden lang unbesch"aftigt.
+
+Hier empfiehlt es sich bei unbekannter Hardware, mit kleinen Portionen zu
+beginnen, die Durchlaufzeiten zu messen und erst dann zu entscheiden, wie die
+weitere Aufteilung aussehen soll. Um eine gute Aussagekraft zu erhalten, sollten
+die ersten Portionen auch nicht zu klein sein, irgendwo zwischen 10--100
+Berechnungen auf jedem Compute Device sollten jedoch gen"ugen. Dabei kann
+durchaus auch iterativ vorgegangen werden, um eine m"oglichst optimale
+Aufteilung zu erreichen.
 
 Zusammengefasst gilt f"ur die Erh"ohung der Anzahl Workgroups:
 
@@ -766,114 +682,89 @@ Zusammengefasst gilt f"ur die Erh"ohung der Anzahl Workgroups:
        gearbeitet werden. So kann die Geschwindigkeit schon mal 
        grunds"atzlich erh"oht werden.
  \item Synchronisation / Abbruch "uber Workgroup-Grenzen hinweg ist 
-       nicht direkt m"oglich.
- \item Als Konsequenz k"onnen unterschiedliche Laufzeiten in den 
-       verschiedenen Compute Devices unter Umst"anden zu 
-       ungewollten Leerlauf-Zeiten f"ur die schnelleren Compute Devices 
-       (beziehungsweise diejenigen, welche das spezifische Problem 
-       schneller l"osen k"onnen, das muss je nach Problem nicht immer
-       dasselbe Compute Device sein)
-       f"uhren. Eine sorgf"altige, an die Geschwindigkeit der 
-       Compute Devices angepasste Aufteilung der Workitems ist n"otig.
+       nicht direkt m"oglich, da die Workgroups nicht miteinander kommunizieren
+			 k"onnen.
+ \item Als Konsequenz k"onnen unterschiedliche Laufzeiten in den verschiedenen
+			 Compute Devices unter Umst"anden zu ungewollten Leerlauf-Zeiten f"ur die
+			 schnelleren Compute Devices f"uhren. Eine sorgf"altige, an die
+			 Geschwindigkeit der Compute Devices angepasste Aufteilung der Workitems ist
+			 n"otig.
 \end{itemize}
 
+\subsubsection{Virtuelle Dimensionserweiterung}
 
+Die Technik der Virtuellen Dimensioneserweiterung wurde zwar bereits in der
+Einf"uhrung erl"autert (siehe Abschnitt \ref{crypt:virtuelle_dimensionen}), soll
+hier aber nochmals zusammenfassend dargestellt werden.
 
-\subsubsection{Virtuelle Dimensionsvergr"osserung}
-
-Die bereits bei der Einf"uhrung ins Problem beschriebene Technik der Virtuellen
-Dimensionen (siehe \ref{crypt:virtuelle_dimensionen}) soll hier nochmals 
-zusammenfassend dargestellt werden.
-
-Ist die Anzahl zu verwendender Dimensionen gr"osser als die "ublicherweise 
+Ist die Anzahl zu verwendender Dimensionen gr"osser als die "ublicherweise
 unterst"utzten 3, aber die Gr"osse der einzelnen Dimensionen vergleichsweise
-klein, so k"onnen im Kernel die Dimensionszahlen f"ur das jeweilige Workitem 
-mittels Modulo-Arithmetik vorgenommen werden:
-
-\begin{center}
-\begin{tabular}{|>{$}c<{$}|>{$}c<{$}|}
-\hline
-  n   & dim \% B  \\
-  n-1 & (dim/B) \% B  \\
-  n-2 & (dim/B^{2}) \% B   \\
-  \vdots  & \ldots \\
-\hline
-\end{tabular}
-\end{center}
-
-Ausser wenn $B$ eine konstante Zweierpotenz ist, was der Compiler in eine 
-Shift-Operation umwandeln kann, sind Divisonen und auch die Modulo-Bildung auch auf
-modernen Floating-Point Units sehr rechenintensiv ist (Anzahl ben"otigte 
-Taktzyklen $ >> 1 $). Trotzdem kann dieses Vorgehen auch f"ur beliebige
-$B$ sinn machen, insbesondere wenn solch eine Dimensionsberechnung mit
+klein, so k"onnen im Kernel die Dimensionszahlen f"ur das jeweilige Workitem
+mittels Modulo-Arithmetik aus der Global ID errechnet werden ($i$ = Global ID,
+$n$ = Anz.  Dimensionen, $d$ = Dimensionsgr"osse):
+\[
+	\left\lfloor\,\frac{i}{d^n}\,\right\rfloor\! \mod\enskip d
+\]
+Solange $d$ keine konstante Zweierpotenz ist, sind Divisionen und Modulo-Bildung
+auch auf modernen Floating-Point Units sehr rechenintensiv (Anzahl ben"otigter
+Taktzyklen $ \gg 1 $). Trotzdem kann dieses Vorgehen auch f"ur beliebige $d$
+sinnvoll sein, insbesondere wenn solch eine Dimensionsberechnung mit
 Modulo-Arithmetik dann gleich f"ur mehrere Berechnungen verwendet werden kann
-(siehe n"achsten Abschnitt).
+(mehr dazu im Abschnitt ``Mehr als eine Berechnung pro Workitem'').
 
-Sollte $ B < n $ sein, kann man sich generell "uberlegen, ob $ n $ und $ B $ 
-allenfalls vertauscht werden k"onnten, wodurch die Anzahl der zur Dimensionsberechnung
-verwendeten Instruktionen in jedem Fall abnehmen w"urde.
+Sollte $d$ kleiner als $n$ sein, kann man sich generell "uberlegen, ob $n$ und
+$d$ allenfalls vertauscht werden k"onnten, wodurch die Anzahl der zur
+Dimensionsberechnung verwendeten Instruktionen in jedem Fall abnehmen w"urde.
 
-Zusammengefasst gilt f"ur die virtuelle Dimensionsvergr"osserung:
+Zusammengefasst gilt f"ur die virtuelle Dimensionserweiterung:
 
 \begin{itemize}
- \item Bei einem Problem, welches nur eine kleine Anzahl Punkte pro 
+ \item Bei einem Problem, welches nur eine kleine Anzahl Berechnungen pro 
        Dimension ben"otigt, aber viele Dimensionen hat, kann mit der
-       virtuellen Dimensionsvergr"osserung eine ``Verschwendung'' von
+       virtuellen Dimensionserweiterung eine ``Verschwendung'' von
        ungenutzen aber m"oglichen Workitems in einer Workgroup verhindert 
        werden.
- \item Die Berechnung der einzelnen Punkte in den virtuellen 
-       Dimensionen ist bei einer beliebigen Basis sehr kostspielig im Bezug 
-       auf daf"ur notwendige Rechenzeit. Werden konstante Zweierpotenzen
-       verwendet verschwindet dieser Nachteil.
- \item Dem Problem der aufw"andigen Dimensionsberechnung kann auch begegnet 
-       werden, indem mit den errechneten Dimensionszahlen
-       mehrere Rechnungen durchgef"uhrt werden. (siehe n"achster Abschnitt)
+ \item Die Berechnungen der virtuellen Dimension mittels Modulo-Arithmetik 
+       ist bei einer beliebigen Dimensionsgr"osse sehr rechenintensiv.
+			 Werden konstante Zweierpotenzen verwendet, kann die Berechnung durch den
+			 Compiler zu einer Shift-Operation optimiert werden.
 \end{itemize}
 
 
-\subsubsection{Mehr als eine Berechnung pro Kernel}
+\subsubsection{Mehr als eine Berechnung pro Workitem}
 
 Ist der Initialisierungsaufwand im Kernel verglichen mit der eigentlichen
-Berechnung relativ gross und zeitaufwendig, so kann es sich lohnen, mehr als 
-eine Berechnung pro Workitem durchf"uhren zu lassen. Speziell dann wenn der 
-Arbeitsbereich zum Beispiel in einer Schleife abgearbeitet werden kann, kann
-mit dieser Technik sehr viel Performance rausgeholt werden.
+Berechnung relativ gross und zeitaufwendig, so kann es sich lohnen, mehr als
+eine Berechnung pro Workitem durchf"uhren zu lassen. Speziell wenn der
+Arbeitsbereich zum Beispiel in einer Schleife abgearbeitet werden kann, kann mit
+dieser Technik sehr viel Performance rausgeholt werden. Der Nachteil dabei ist
+ein potentieller Verlust von Parallelit"at.
 
-Denn das Vorgehen, dass ein Kernel jeweils eine einzelne Rechnung macht, 
-ist zwar von der Systematik in der Problemaufteilung durchaus sinnvoll 
-und auch einfach zu verstehen. Doch gerade wenn die Berechnungen im Workitem
-nicht sehr Aufw"andig sind, nimmt die Initialisierung im Vergleich zum eigentlichen
-Rechenvorgang sehr viel Zeit und somit Rechenzeit in Anspruch. Macht zum Beispiel 
-die Initialisierung 20 \% der gesamten Rechenzeit aus, so ist ein 
-Optimierungspotential von nahezu demselben Faktor m"oglich, wenn statt einer 10 Berechnungen 
-in einem Kernel durchgef"uhrt werden (Dann betr"agt der Overhead noch gem"ass der 
-Milchb"uchleinrechnung noch 2 \%, real sind es meist etwas mehr, da der Overhead der 
-Schleife noch dazu kommt). 
+Macht beispielsweise die Initialisierung innerhalb des Workitems 20\% der
+gesamten Rechenzeit aus, so ist ein Optimierungspotential von Faktor 10
+m"oglich, wenn statt einer gleich zehn Berechnungen in einem Workitem
+durchgef"uhrt werden. Der Overhead betr"agt dann (zumindest theoretisch) noch
+2\% pro Berechnung. 
 
-Im aktuellen Beispiel des MD5-Cracking konnte durch die Einf"uhrung zweier
-Schleifen, welche f"ur die letzten zwei Zeichen des Strings insgesamt 
-\[ 26^2 = 676 \] Berechnungen und Stringpr"ufungen durchf"uhrten, die 
-maximale L"ange des berechenbaren Strings ohne gross sp"urbare zus"atzliche
-Rechenzeit um zwei Zeichen erweitert werden.
+Da nun jedoch das Paradigma einer einzelnen Berechnung pro Workitem verletzt
+wird, bekommt die Problemaufteilung neben den Workgroups und Workitems eine
+zus"atzliche Ebene, was auch die Komplexit"at der Aufteilung erh"oht. Das kann
+beispielsweise dazu f"uhren, dass ein zu grosses Workitem noch l"auft, w"ahrend
+Ressourcen frei w"aren um einige der Berechnungen parallel in einem anderen
+Workitem auszuf"uhren ($\rightarrow$ Parallelit"atsverlust).
 
-Da nun das Paradigma eine Berechnung pro Workitem verletzt wird, bekommt
-die Problemaufteilung neben den Workgroups und Workitems eine zus"atzliche 
-Ebene, was auch die Komplexit"at der Aufteilung erh"oht. Insbesondere in 
-den Grenzregionen muss besondere Beachtung geschenkt werden, um nicht
-gewisse Rechnungen mehrfach oder, was deutlich gravierender w"are, gar nicht
-ausgef"uhrt werden.
+Zusammengefasst gilt f"ur die Verwendung mehrerer Berechnungen pro Workitem:
 
 \begin{itemize}
- \item Ist die Initialisierung im Kernel "anhlich rechenintensiv wie die
-       tats"achliche Berechnung selber (bis ca. Faktor 1 : 10) und das 
+ \item Ist die Initialisierung im Workitem "ahnlich rechenintensiv wie die
+       tats"achliche Berechnung selber und ist das 
        Arbeitspaket durch einfache Schleifen ``erweiterbar'', so lohnt
        es sich dar"uber Gedanken zu machen, ob man mehr als eine Berechnung
-       pro Workitem machen soll.
+       pro Workitem durchf"uhren soll.
  \item Doch steigen die Anforderungen an die Aufteilung der Arbeitspakete:
        Soll nur in eine Dimension erweitert werden? Und in welche? Was 
-       passiert an den Grenzen, wenn die Anzahl Berechnungen im Kernel die 
-       noch zu berechnende Anzahl Punkte "ubersteigt?
- \item Auf unterschiedlicher Hardware kann das Verh"altnis Initialisierung : 
+       passiert in Grenzf"allen? Ist ein Verlust der Parallelit"at m"oglich?
+ \item Auf unterschiedlicher Hardware kann das Verh"altnis Initialisierung zu
        Rechenzeit durchaus deutliche Unterschiede zeigen. Die Aufteilung
        lohnt sich nicht in jedem Fall und muss auf die jeweilige Hardware
        zugeschnitten werden.
@@ -882,60 +773,53 @@ ausgef"uhrt werden.
 
 
 
-\subsubsection{Mehrfacher parametrisierter ``Anwurf'' der OpenCL Maschine}
+\subsubsection{Mehrfacher, parametrisierter Start des OpenCL Kernels}
 
-St"osst man trotz der in den vorherigen Abschnitten betrachteten Techniken
-an die Grenzen einer Workgroup oder sogar der Gesamtzahl der verf"ugbaren
-Workgroups, oder will man vor allem bei Verwendung mehrerer Workgroups 
-nach einer gewissen Anzahl von Berechnungen pr"ufen ob das Ergebnis schon
-vorliegt, so muss man die OpenCL Maschine mehrmals aufrufen. Dabei kann 
-ein Offset definiert werden, der dann bei der Berechnung des Arbeitspakets
-im Kernel zu der Dimensionszahl hinzu gez"ahlt wird.
+St"osst man trotz der in den vorherigen Abschnitten betrachteten Techniken an
+die Grenzen einer Workgroup oder sogar der Gesamtzahl der verf"ugbaren
+Workgroups, oder will man vor allem bei Verwendung mehrerer Workgroups nach
+einer gewissen Anzahl von Berechnungen pr"ufen ob das Ergebnis schon vorliegt,
+so muss man den OpenCL Kernel mehrmals aufrufen. Dabei kann ein Offset definiert
+werden, der dann bei der Berechnung des Arbeitspakets im Kernel zu der
+Dimensionszahl hinzugez"ahlt wird (Fragmentierung).
 
-"Ubergeben werden kann dieser Offset mit einer globalen Variable, die vom
-Rahmenprogramm direkt gesetzt wird, welches auch die Workgroups vorbereitet 
-und die Workitems startet. Diese globale Variable kann dann in jedem Workitem
-ausgelesen werden. Realisiert werden kann dies mit OpenCL Buffer Objects.
-Damit kann das Programm beliebig weiter ausgebaut
-werden, jedoch kostet der ``Anwurf'' der OpenCL Maschine auch Rechenzeit.
-F"ur eine kleine Menge von Workitems mit jeweils kurzer Rechenzeit pro Kernel
-lohnt sich der Aufwand somit im Normalfall kaum. 
+Dieser Offset kann vom initialisierenden Code mit einer globalen Variable
+"ubergeben werden. Die Variable kann dann in jedem Workitem ausgelesen werden.
+Realisiert werden kann dies mit OpenCL Buffer Objects. Damit kann das Programm
+beliebig weiter ausgebaut werden, jedoch kostet die Initialisierung eines OpenCL
+Kernels auch Rechenzeit. F"ur eine kleine Menge von Workitems mit jeweils
+kurzer Rechenzeit pro Workitem lohnt sich der Aufwand somit im Normalfall kaum. 
 
-Anders sieht die 
-Ausgangslage aus, wenn die Berechnungen pro Workitem sehr aufw"andig oder
-die Workgroup sehr gross wird, insbesondere auch dann, wenn nicht einfach von 
-A bis Z durchgerechnet werden soll, sondern gelegentlich auf eine 
-(Workgroup-"Ubergreifende) Abbruchbedingung gepr"uft werden soll. Denn
-"uber die Workgroup hinaus kann kein Abbruch (und auch keine anderen 
-Ereignisse) kommuniziert werden. Es muss gewartet werden, bis die restlichen
-Workgroups fertig sind mit ihrem Arbeitspaket, und erst dann kann "uber
-die ganze Maschinerie hinaus gepr"uft werden, ob das Abbruchkriterium
-erf"ullt ist und anschliessend die Maschine weitergelaufen lassen 
-beziehungsweise definitiv angehalten werden.
+Anders sieht die Lage aus, wenn die Berechnungen pro Workitem sehr aufwendig
+sind, die Workgroup sehr gross wird oder wenn gelegentlich eine
+(workgroup-"ubergreifende) Abbruchbedingung gepr"uft werden soll. Zwischen den
+Workgroups kann keine Kommunikation stattfinden und so auch keine
+Abbruchbedingung gesetzt oder gepr"uft werden. Es muss gewartet werden, bis die
+restlichen Workgroups fertig sind mit ihrem Arbeitspaket, erst dann kann "uber
+mehrere Workgroups hinweg gepr"uft werden, ob das Abbruchkriterium erf"ullt ist
+um anschliessend die Ausf"uhrung weiterlaufen zu lassen oder anzuhalten.
 
-Wie im letzten Abschnitt anget"ont kann es sich vor allem bei heterogenen 
-Umgebungen von Compute Devices auch lohnen, schon relativ fr"uh die 
-Berechnungen nochmals anzuhalten, diesmal aber nicht mit dem Ziel auf eine
-Abbruchbedingung zu pr"ufen, sondern die Workitems anhand der gemessenen
-Laufzeiten der Workgroups m"oglichst effizient auf die Compute Devices
-aufzuteilen.
+Wie bereits im Abschnitt zur Verwendung mehrerer Workgroups anget"ont, kann
+es sich zudem vor allem bei heterogenen Compute Device Umgebungen auch lohnen,
+schon relativ fr"uh die Berechnungen nochmals anzuhalten um die Workitems anhand
+der gemessenen Laufzeiten der Workgroups m"oglichst effizient auf die Compute
+Devices aufzuteilen.
+
+Zusammengefasst gilt f"ur den parametrisierten Start von OpenCL Kernels:
 
 \begin{itemize}
- \item Die OpenCL-Maschine mehrfach anzuhalten und wieder anzuwerfen 
-       kann aus unterschiedlichen Gr"unden Sinn machen: Zum einen
+ \item Den OpenCL Kernel mehrfach anzuhalten und wieder zu starten
+       kann aus unterschiedlichen Gr"unden sinnvoll sein. Beispielsweise
        wenn das Problem so gross wird, dass es nicht mehr sinnvoll auf 
        die verf"ugbare Menge von Workgroups und Workitems je Workgroup
-       aufgeteilt werden kann; Wenn das Problem eine definierte 
+       aufgeteilt werden kann, wenn das Problem eine definierte 
        Abbruchbedingung hat, die man regelm"assig und Workgroup-
-       "Ubergreifend pr"ufen m"ochte; W"ahrend dem Einmessvorgang
-       zur m"oglichst optimalen Aufteilung der Arbeitspakete f"ur die 
-       jeweilige Performance des Compute Devices.
- \item Der Overhead f"ur den Anwurf der OpenCL Maschine kann aber im 
-       vergleich zur Arbeitszeit eines Kernels sehr gross sein. Es soll
-       also von dieser Technik trotz der genannten Vorteile und 
-       M"oglichkeiten nur mit Bedacht gebrauch gemacht werden, und 
-       (ausser allenfalls bei der Einmessung) die OpenCL Maschine
-       m"oglichst lange selbst rechnen lassen.
+       "Ubergreifend pr"ufen m"ochte, oder wenn man die Performance eines
+			 Compute Devices automatisiert messen m"ochte.
+ \item Der Overhead f"ur die Initialisierung und den Start eines OpenCL Kernels
+			 kann aber im Vergleich zur Arbeitszeit eines Kernels sehr gross sein. Diese
+			 Technik sollte also trotz also der genannten Vorteile und M"oglichkeiten
+			 nur mit Bedacht eingesetzt werden.
 \end{itemize}
 
 
