typographische Aenderungen am Crypto-Paper

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -434,9 +434,9 @@ An dieser Stelle macht es Sinn, sich nochmals vereinfacht die Top-Down-Struktur
 von OpenCL (wie bereits in Abbildung \ref{hardware:opencl} gezeigt) vor Augen zu
 f"uhren:
 \[
-	Platform \rightarrow Compute Device \rightarrow Compute Unit
+	\textit{Platform} \rightarrow \textit{Compute Device} \rightarrow \textit{Compute Unit}
 \]\[
-	(\rightarrow Workgroup \rightarrow Workitem \rightarrow Workitem Dimension)
+	(\rightarrow \textit{Workgroup} \rightarrow \textit{Workitem} \rightarrow \textit{Workitem Dimension})
 \]
 \noindent In dieser Reihenfolge werden auch die Hardwaremerkmale abgefragt.
 OpenCL 1.2 stellt dazu folgende Funktionen zur Verf"ugung:
