--- a/skript/julia/julia.tex
+++ b/skript/julia/julia.tex
@@ -198,7 +198,7 @@ f"ur eine Auswahl von Parameterwerten $c$ visualisiert.
 F"ur \ref{julia:a} bis \ref{julia:f} gibt es jeweils einen Zyklus, gegen
 den ein Teil der Iterationsfolgen konvergiert.
 In \ref{julia:g} und \ref{julia:h} ist die Menge der Startpunkte, die zu einem
-Zyklus f"uhren auf die leere Menge zusammengeschrumpft, es bleibt nur
+Zyklus f"uhren, auf die leere Menge zusammengeschrumpft, es bleibt nur
 noch die Julia-Menge "ubrig, bestehend aus Startwerten, die nicht zu
 Iterationen gegen $\infty$ f"uhren.
 In \ref{julia:g} zerf"allt die Julia-Menge in einzelne Punkte, 
