--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -73,7 +73,7 @@ Wetterentwicklung ausgedacht \cite{skript:richardson}.
 Zu deren Durchf"uhrung stellte er sich
 eine {\em Forecast Fatory} vor (Abbildung~\ref{forecastfactory}),
 ein riesiges, theaterartiges Geb"aude,
-wo viele Computer, also Arbeiter mit mechanischen Rechenmaschinen an der
+wo viele Computer, also Arbeiter mit mechanischen Rechenmaschinen, an der
 Berechnung der Atmosph"arenentwicklung f"ur jeweils ein Teilgebiet
 der Erdoberfl"ache arbeiten,
 und ihre Resultate an ihre Nachbar-Rechner weitergeben. 
