Crypto: Formulierungen verbessert

--- a/skript/crypto/crypto.bib
+++ b/skript/crypto/crypto.bib
@@ -19,10 +19,10 @@
   title={Kryptographie und IT-Sicherheit: Grundlagen und Anwendungen},
   author={Stephan Spitz and Michael Pramateftakis and Joachim Swoboda},
   isbn={9783834814876},
-  series={Studium : IT-Sicherheit und Datenschutz},
+  series={Studium: IT-Sicherheit und Datenschutz},
   year={2011},
   publisher={Vieweg+Teubner Verlag},
-	pages={95-106},
+	pages={95-106}
 }
 
 @manual{crypto:opencl_ref,
