--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -374,16 +374,16 @@ man doch irgendwann an die Grenzen der Hardware oder der Implementierung.  Denn
 jedes Workitem, das ausgef"uhrt wird, ben"otigt Speicherplatz (Gr"osse des zur
 Verf"ugung stehenden Speichers, Hardware) und muss irgendwie verwaltet werden
 (Anzahl der maximal verwaltbaren Workitems und Workgroups, Implementierung).
-Zudem ist die Anzahl Dimensionen, die von einem Workitem verarbeitet werden k"onnen
-begrenzt (Workitem-Dimension, Hardware \& Implementierung). Deshalb folgen in
-diesem Kapitel einige Betrachtungen dazu, wie man mit diesen Limitationen
-umgehen kann.
+Zudem ist die Anzahl Dimensionen, die von einem Workitem verarbeitet werden
+k"onnen, begrenzt (Workitem-Dimension, Hardware \& Implementierung). Deshalb
+folgen in diesem Kapitel einige Betrachtungen dazu, wie man mit diesen
+Limitationen umgehen kann.
 
 Wie in der Einleitung im Abschnitt \ref{crypto:keyspace} bereits erl"autert
 wurde, ergeben sich beim Zeichensatz \texttt{[a-zA-Z0-9]} und einer Wortl"ange
-von 8 Zeichen mehr als 200 Billionen ($2 * 10^{12}$) m"ogliche Kombinationen.
+von 8 Zeichen mehr als 200 Billionen ($2 \cdot 10^{12}$) m"ogliche Kombinationen.
 Dieser Problemgr"osse stehen aber auf einem System mit einem Intel Core i5-3320M
-Prozessor, 8GB RAM und in einer OpenCL Workgroup gem"ass dem OpenCL Standard
+Prozessor, 8 GB RAM und in einer OpenCL Workgroup gem"ass dem OpenCL Standard
 theoretisch maximal
 
 \[
@@ -396,10 +396,10 @@ theoretisch maximal
 
 \noindent verwaltbare ``Problem-Teile'' entgegen. Trotzdem l"asst zum Beispiel
 die OpenCL Implementierung von Intel eine gr"ossere Anzahl Workitems problemlos
-zu, wohingegen sich die Nvidia Implementation mit einer ``Out of
-resources''-Meldung beendet.
+zu, wohingegen sich die Nvidia Implementation mit einer ``Out Of
+Resources''-Meldung beendet.
 
-Genau um diese Grenzen soll es in diesem Abschnitt gehen. Es soll dabei nicht
+Genau um diese Herausforderungen soll es in diesem Abschnitt gehen. Es soll dabei nicht
 ersch"opfend auf die Grenzen von OpenCL oder auf alle Spezifikas der
 Implementierungen eingegangen, sondern vielmehr f"ur das Thema sensibilisiert
 werden. Es sollen m"ogliche Ans"atze f"ur den Umgang mit grossen Problemen in
@@ -413,7 +413,7 @@ zugeschnittene Ans"atze entwickeln kann.
 OpenCL wurde entwickelt, um trotz einem m"oglichst Plattform"ubergreifenden
 Ansatz sehr flexibel auf die Spezifika der jeweiligen Hardware reagieren zu
 k"onnen. Das macht den Standard und die Grundkonzepte vor allem f"ur Einsteiger
-nicht unbedingt einfacher zu begreifen. Insbesondere k"onnen sich trotz
+nicht gerade einfacher zu begreifen. Insbesondere k"onnen sich trotz
 standardisierter Schnittstelle die einzelnen OpenCL Compute Devices sehr stark
 voneinander unterscheiden, was wiederum die unterst"utzten Datentypen, die
 maximale Problemgr"osse und weitere Faktoren beeinflusst. Auf die wichtigsten
@@ -427,8 +427,8 @@ Gerade weil OpenCL so unterschiedliche Hardwareklassen unterst"utzt -- von der
 ``normalen'' Desktop-CPU bis zu f"ur HPC Anwendungen spezialisierte Rechenkarten
 -- gibt es einen sehr m"achtigen Weg, um die jeweiligen Hardwaremerkmale
 abzufragen.  Das kann soweit gehen, dass w"ahrend der Laufzeit die
-Hardwarekonfiguration abgefragt wird, um das Problem dynamisch auf die
-vorhandene Hardware zu optimieren.
+Hardwarekonfiguration abgefragt wird, um das Problem dynamisch daf"ur zu
+optimieren.
 
 An dieser Stelle macht es Sinn, sich nochmals vereinfacht die Top-Down-Struktur
 von OpenCL (wie bereits in Abbildung \ref{hardware:opencl} gezeigt) vor Augen zu
@@ -461,11 +461,11 @@ OpenCL 1.2 stellt dazu folgende Funktionen zur Verf"ugung:
 \noindent Die genauen Parameter und R"uckgabewerte k"onnen der offiziellen
 OpenCL-Referenz\cite{crypto:opencl_ref} entnommen werden.
 
-Um die vorher genannten Funktionen und deren M"oglichkeiten zu demonstrieren, wird ein kurzes
+Um diese Funktionen und deren M"oglichkeiten zu demonstrieren, wird nachfolgend ein kurzes
 Code-Beispiel f"ur einen typischen Desktop-Computer mit einer OpenCL f"ahigen
 CPU und einer modernen Grafikkarte aufgef"uhrt. Es ist exemplarisch, der
-Anschaulichkeit wegen in Pseudocode verfasst und repr"asentiert weder den vollen
-Umfang der R"uckgabewerte noch die real ben"otigten Parameter!
+Anschaulichkeit wegen in Pseudocode verfasst und stellt weder den vollen
+Umfang der R"uckgabewerte dar noch die real ben"otigten Parameter!
 
 \begin{small}
 \begin{verbatim}
@@ -529,15 +529,15 @@ Datatypes:
  \item [Profile] \texttt{full} oder \texttt{embedded} (in OpenCL 1.2).
  \item [Type]    \texttt{CPU}, \texttt{GPU} oder \texttt{ACCELERATOR}.
  \item [Compute Units] Anzahl der physisch vorhandenen Compute Units. Dies ist
-                 die Anzahl effektiv parallel ausgef"uhrten Workitems.
+                 die Anzahl effektiv pa\-ral\-lel ausgef"uhrten Workitems.
  \item [Max work group size] Maximale Anzahl Workitems in einer Workgroup.
  \item [Max work item dim.] Maximale direkt im Workitem bearbeitbare
-	 Dimensionen, minimal 1, maximal 3.
+	 Dimensionen, zwischen 1 und 3.
  \item [Max work item size] Maximale Anzahl von Workitems in einer Workgroup nach
-                 Dimensionen (Ist je nach Ger"at unterschiedlich in den verschiedenen
+                 Dimensionen (ist je nach Ger"at unterschiedlich in den verschiedenen
                  Dimensionen).
- \item [Preferred vector size] (F"ur jeden unterst"utzten Datentyp) Vektorgr"osse, 
-                 die von der Hardware f"ur den jeweiligen Typ direkt (also sprich in einer 
+ \item [Preferred vector size] F"ur jeden unterst"utzten Datentyp die Vektorgr"osse, 
+                 die von der Hardware f"ur den jeweiligen Typ direkt (also in einer 
                  Instruktion) verarbeitet werden kann.
  
 \end{description}
@@ -571,10 +571,10 @@ Simulationsproblem in lauter kleine W"urfel aufteilen l"asst
 (Anwendungsbeispiele hierf"ur gibt es viele, wie z.~B. Str"omungssimulationen,
 Verformungen bei Krafteinwirkung oder Wetterberechnungen). Dabei nehmen wir an,
 dass f"ur unser Problem eine Unterteilung des Raumes in $1\textrm{ mm}^{3}$
-W"urfel gen"ugt. Dabei soll in jedem Iterationsschritt der Zustand in jeweils
+W"urfel gen"ugt. In jedem Iterationsschritt soll der Zustand in jeweils
 einem Workitem neu berechnet werden.
 
-Zuerst berechnen wir das maximal so simulierbare Volumen mit einer einzelnen
+Zuerst berechnen wir das maximal so simulierbare Volumen bei Verwendung einer einzelnen
 Workgroup.  Da die Gesamtzahl der Workitems in einer Workgroup f"ur das aktuelle
 Beispiel 8192 nicht "uberschreiten darf, k"onnen maximal
 
@@ -587,13 +587,13 @@ $2\textrm{ cm}^{3}$, was uns in den meisten F"allen noch nicht sonderlich weit b
 
 Angenommen wir erweitern nun die Zahl der Workgroups nach demselben Schema --
 d.~h. jede Workgroup berechnet einen $2\textrm{ cm}^{3}$ W"urfel -- so
-entspricht das bei einer maximalen Workgroupzahl von 8192 zwanzig solcher
+entspricht das bei einer maximalen Workgroupzahl von 8192 zwanzig solchen
 W"urfeln in jede Dimension. Somit k"onnten wir f"ur die oben genannte
 Implementation in einem Berechnungsdurchgang von OpenCL einen W"urfel von
 $40\textrm{ cm}^{3}$ berechnen. Auch diese Zahl ist noch nicht sonderlich
 berauschend. 
 
-Im Folgenden soll nun gezeigt werden, wie das Problem so aufgeteilt werden kann,
+Im n"achsten Abschnitt soll nun gezeigt werden, wie das Problem so aufgeteilt werden kann,
 dass die Berechnung trotz der enormen Problemgr"osse noch durchgef"uhrt werden
 k"onnen.
 
@@ -601,7 +601,7 @@ k"onnen.
 
 Sp"atestens wenn die Grenzen der Hardware erreicht sind, sollte man sich
 Gedanken zur besseren Aufteilung eines Problemes machen. Es lohnt sich aber
-bereits bei ``kleineren'' grossen Problemen, welche noch nicht an die Grenzen
+bereits bei kleineren Problemen, welche noch nicht an die Grenzen
 der Hardware stossen, diese m"oglichst effektiv aufzuteilen, so dass die
 vorhandenen Ressourcen optimal ausgenutzt werden k"onnen.  In diesem Kapitel
 werden daher die folgenden vier Techniken vorgestellt:
@@ -613,9 +613,9 @@ werden daher die folgenden vier Techniken vorgestellt:
  \item Mehrfacher, parametrisierter Start des OpenCL Kernels
 \end{itemize}
 
-Dazu ist anzumerken, dass hier auf diejenigen Techniken eingegangen wird, die
-auch im Zuge der Implementierung des MD5-Cracking Projekts ausprobiert oder
-evaluiert wurden. Die Liste erhebt weder die den Anspruch auf Vollst"andigkeit,
+\noindent Dazu ist anzumerken, dass hier auf diejenigen Techniken eingegangen wird, die
+auch im Zuge der Implementierung des MD5-Cracking Projektes
+evaluiert wurden. Die Liste erhebt weder den Anspruch auf Vollst"andigkeit,
 noch ist sie f"ur jedes spezielle Problem anwendbar. Wir hoffen aber, dem Leser
 ein paar Ideen in die Hand zu geben, wie er seine eigenen Anwendungen weiter
 optimieren kann.
@@ -630,7 +630,7 @@ wiederum ein oder mehrere Compute Devices -- real parallel laufende Rechenkerne
 
 Genau hier kommt das Thema ``Mehrere Workgroups'' ins Spiel, denn eine Workgroup
 kann jeweils nur auf einem Compute Device laufen. Will man also nicht nur einen
-Prozessor \textit{oder} eine Recheneinheit der Grafikkarte verwenden, sondern
+Prozessorkern \textit{oder} eine Recheneinheit der Grafikkarte verwenden, sondern
 die CPU \textit{und} die Grafikkarte voll ausnutzen, m"ussen unabh"angig von der
 Problemgr"osse mehrere Workgroups erzeugt werden.
 
@@ -638,21 +638,21 @@ Wie bereit im Abschnitt \ref{crypto:problemgroesse:3d} erl"autert, kann mit den
 Workgroups die Anzahl der verarbeitbaren Workitems pro Berechnungsdurchgang der
 OpenCL-Maschine bereits deutlich erh"oht werden. Je nach Implementation und
 verwendeten Frameworks wird die Aufteilung in Workgroups sogar automatisch
-vorgenommen, wenn nichts explizit angegeben wurde. M"ochte man aber die
+vorgenommen, wenn nichts explizit definiert wurde. M"ochte man aber die
 vorhandene Hardware optimal ausnutzen und dabei ber"ucksichtigen, dass die
-Compute Devices nicht alle gleich schnell rechnen, kommt man nicht darum herum
+Compute Devices nicht alle gleich schnell rechnen, kommt man nicht darum herum,
 sich selbst Gedanken "uber die Aufteilung in Workgroups zu machen.
 
 Die Herausforderung dabei ist, die Anzahl der Workitems so "uber die Workgroups
 auf die Compute Devices zu verteilen, dass die Berechnungen der jeweiligen
 Workgroup auf allen Compute Devices ungef"ahr "ahnlich lange dauert.  Dabei geht
-es nicht lediglich um Sekunden; es kann durchaus sein dass die Portion, welche
+es nicht lediglich um Sekunden; es kann durchaus sein, dass die Portion, welche
 auf der GPU gerechnet wurde, nach 30 Minuten bereits fertig ist, w"ahrend
 diejenige der CPU 3 Stunden dauert. Da die OpenCL Spezifikation keinen Abbruch
 oder eine Neuverteilung zul"asst, bevor nicht alle Workgroups fertig gelaufen
 sind, ist die GPU in diesem Fall also 2.5 Stunden lang unbesch"aftigt.
 
-Hier empfiehlt es sich bei unbekannter Hardware, mit kleinen Portionen zu
+Hier empfiehlt es sich, bei unbekannter Hardware mit kleinen Portionen zu
 beginnen, die Durchlaufzeiten zu messen und erst dann zu entscheiden, wie die
 weitere Aufteilung aussehen soll. Um eine gute Aussagekraft zu erhalten, sollten
 die ersten Portionen auch nicht zu klein sein, irgendwo zwischen 10--100
@@ -663,10 +663,9 @@ Aufteilung zu erreichen.
 Zusammengefasst gilt f"ur die Erh"ohung der Anzahl Workgroups:
 
 \begin{itemize}
- \item Zur Ausn"utzung aller Compute Devices auf einer Plattform
+ \item Zur Ausnutzung aller Compute Devices auf einer Plattform
        muss zwingend mit mindestens einer Workgroup pro Compute Device
-       gearbeitet werden. So kann die Geschwindigkeit schon mal 
-       grunds"atzlich erh"oht werden.
+       gearbeitet werden.
  \item Synchronisation / Abbruch "uber Workgroup-Grenzen hinweg ist 
        nicht direkt m"oglich, da die Workgroups nicht miteinander kommunizieren
 			 k"onnen.
@@ -674,7 +673,7 @@ Zusammengefasst gilt f"ur die Erh"ohung der Anzahl Workgroups:
 			 Compute Devices unter Umst"anden zu ungewollten Leerlauf-Zeiten f"ur die
 			 schnelleren Compute Devices f"uhren. Eine sorgf"altige, an die
 			 Geschwindigkeit der Compute Devices angepasste Aufteilung der Workitems ist
-			 n"otig.
+			 notwendig.
 \end{itemize}
 
 \subsubsection{Virtuelle Dimensionserweiterung}
@@ -684,13 +683,14 @@ Einf"uhrung erl"autert (siehe Abschnitt \ref{crypt:virtuelle_dimensionen}), soll
 hier aber nochmals zusammenfassend dargestellt werden.
 
 Ist die Anzahl zu verwendender Dimensionen gr"osser als die "ublicherweise
-unterst"utzten 3, aber die Gr"osse der einzelnen Dimensionen vergleichsweise
+unterst"utzten drei, aber die Gr"osse der einzelnen Dimensionen vergleichsweise
 klein, so k"onnen im Kernel die Dimensionszahlen f"ur das jeweilige Workitem
 mittels Modulo-Arithmetik aus der Global ID errechnet werden ($i$ = Global ID,
-$n$ = Anz.  Dimensionen, $d$ = Dimensionsgr"osse):
+$n$ = Anzahl  Dimensionen, $d$ = Dimensionsgr"osse):
 \[
 	\left\lfloor\,\frac{i}{d^n}\,\right\rfloor\! \mod\enskip d
 \]
+
 Solange $d$ keine konstante Zweierpotenz ist, sind Divisionen und Modulo-Bildung
 auch auf modernen Floating-Point Units sehr rechenintensiv (Anzahl ben"otigter
 Taktzyklen $ \gg 1 $). Trotzdem kann dieses Vorgehen auch f"ur beliebige $d$
@@ -713,7 +713,7 @@ Zusammengefasst gilt f"ur die virtuelle Dimensionserweiterung:
  \item Die Berechnungen der virtuellen Dimension mittels Modulo-Arithmetik 
        ist bei einer beliebigen Dimensionsgr"osse sehr rechenintensiv.
 			 Werden konstante Zweierpotenzen verwendet, kann die Berechnung durch den
-			 Compiler zu einer Shift-Operation optimiert werden.
+			 Compiler zu einer effizienten Shift-Operation optimiert werden.
 \end{itemize}
 
 
@@ -722,7 +722,7 @@ Zusammengefasst gilt f"ur die virtuelle Dimensionserweiterung:
 Ist der Initialisierungsaufwand im Kernel verglichen mit der eigentlichen
 Berechnung relativ gross und zeitaufwendig, so kann es sich lohnen, mehr als
 eine Berechnung pro Workitem durchf"uhren zu lassen. Speziell wenn der
-Arbeitsbereich zum Beispiel in einer Schleife abgearbeitet werden kann, kann mit
+Arbeitsbereich in einer Schleife abgearbeitet werden kann, kann mit
 dieser Technik sehr viel Performance rausgeholt werden. Der Nachteil dabei ist
 ein potentieller Verlust von Parallelit"at.
 
@@ -743,14 +743,14 @@ Zusammengefasst gilt f"ur die Verwendung mehrerer Berechnungen pro Workitem:
 
 \begin{itemize}
  \item Ist die Initialisierung im Workitem "ahnlich rechenintensiv wie die
-       tats"achliche Berechnung selber und ist das 
-       Arbeitspaket durch einfache Schleifen ``erweiterbar'', so lohnt
-       es sich dar"uber Gedanken zu machen, ob man mehr als eine Berechnung
-       pro Workitem durchf"uhren soll.
- \item Doch steigen die Anforderungen an die Aufteilung der Arbeitspakete:
+       tats"achliche Berechnung selber, und ist das 
+       Arbeitspaket durch einfache Schleifen ``erweiterbar'', so sollte man
+       sich dar"uber Gedanken machen, ob man mehr als eine Berechnung
+       pro Workitem durchf"uhren sollte.
+ \item Dabei steigen jedoch die Anforderungen an die Aufteilung der Arbeitspakete:
        Soll nur in eine Dimension erweitert werden? Und in welche? Was 
-       passiert in Grenzf"allen? Ist ein Verlust der Parallelit"at m"oglich?
- \item Auf unterschiedlicher Hardware kann das Verh"altnis Initialisierung zu
+       passiert in Grenzf"allen? Ist eine Reduktion von Parallelit"at m"oglich?
+ \item Auf unterschiedlicher Hardware kann das Verh"altnis der Initialisierung zur
        Rechenzeit durchaus deutliche Unterschiede zeigen. Die Aufteilung
        lohnt sich nicht in jedem Fall und muss auf die jeweilige Hardware
        zugeschnitten werden.
@@ -762,31 +762,31 @@ Zusammengefasst gilt f"ur die Verwendung mehrerer Berechnungen pro Workitem:
 St"osst man trotz der in den vorherigen Abschnitten betrachteten Techniken an
 die Grenzen einer Workgroup oder sogar der Gesamtzahl der verf"ugbaren
 Workgroups, oder will man vor allem bei Verwendung mehrerer Workgroups nach
-einer gewissen Anzahl von Berechnungen pr"ufen ob das Ergebnis schon vorliegt,
-so muss man den OpenCL Kernel mehrmals aufrufen. Dabei kann ein Offset definiert
-werden, der dann bei der Berechnung des Arbeitspakets im Kernel zu der
+einer gewissen Anzahl von Berechnungen pr"ufen, ob das Ergebnis schon vorliegt,
+so muss man den OpenCL Kernel mehrmals hintereinander mit einer Untermenge aller
+Aufgaben aufrufen. Dabei kann ein Offset definiert
+werden, der dann bei der Berechnung des Arbeitspaketes im Kernel zu der
 Dimensionszahl hinzugez"ahlt wird (Fragmentierung).
-
-Dieser Offset kann vom initialisierenden Code mit einer globalen Variable
+Dieser Offset kann vom initialisierenden Code beispielsweise mittels einer globalen Variable
 "ubergeben werden. Die Variable kann dann in jedem Workitem ausgelesen werden.
-Realisiert werden kann dies mit OpenCL Buffer Objects. Damit kann das Programm
-beliebig weiter ausgebaut werden, jedoch kostet die Initialisierung eines OpenCL
-Kernels auch Rechenzeit. F"ur eine kleine Menge von Workitems mit jeweils
-kurzer Rechenzeit pro Workitem lohnt sich der Aufwand somit im Normalfall kaum. 
 
+Damit kann das Programm
+beliebig weiter ausgebaut werden, jedoch kostet die Initialisierung eines OpenCL
+Kernels auch Rechenzeit. F"ur eine kleine Anzahl Workitems mit jeweils
+kurzer Rechenzeit lohnt sich der Aufwand somit im Normalfall kaum.
 Anders sieht die Lage aus, wenn die Berechnungen pro Workitem sehr aufwendig
 sind, die Workgroup sehr gross wird oder wenn gelegentlich eine
-(workgroup-"ubergreifende) Abbruchbedingung gepr"uft werden soll. Zwischen den
-Workgroups kann keine Kommunikation stattfinden und so auch keine
+(workgroup"ubergreifende) Abbruchbedingung gepr"uft werden soll. Zwischen den
+Workgroups kann keine Kommunikation stattfinden und dadurch auch keine
 Abbruchbedingung gesetzt oder gepr"uft werden. Es muss gewartet werden, bis die
 restlichen Workgroups fertig sind mit ihrem Arbeitspaket, erst dann kann "uber
 mehrere Workgroups hinweg gepr"uft werden, ob das Abbruchkriterium erf"ullt ist
 um anschliessend die Ausf"uhrung weiterlaufen zu lassen oder anzuhalten.
 
-Wie bereits im Abschnitt zur Verwendung mehrerer Workgroups anget"ont, kann
+Wie bereits im Abschnitt zur Verwendung mehrerer Workgroups erstmals erw"ahnt, kann
 es sich zudem vor allem bei heterogenen Compute Device Umgebungen auch lohnen,
-schon relativ fr"uh die Berechnungen nochmals anzuhalten um die Workitems anhand
-der gemessenen Laufzeiten der Workgroups m"oglichst effizient auf die Compute
+schon relativ fr"uh die Berechnungen nochmals zu pausieren um die Workitems anhand
+der gemessenen Laufzeiten m"oglichst effizient auf die Compute
 Devices aufzuteilen.
 
 Zusammengefasst gilt f"ur den parametrisierten Start von OpenCL Kernels:
@@ -797,8 +797,8 @@ Zusammengefasst gilt f"ur den parametrisierten Start von OpenCL Kernels:
        wenn das Problem so gross wird, dass es nicht mehr sinnvoll auf 
        die verf"ugbare Menge von Workgroups und Workitems je Workgroup
        aufgeteilt werden kann, wenn das Problem eine definierte 
-       Abbruchbedingung hat, die man regelm"assig und Workgroup-
-       "Ubergreifend pr"ufen m"ochte, oder wenn man die Performance eines
+       Abbruchbedingung hat, die man regelm"assig und workgroup"ubergreifend
+			 pr"ufen m"ochte, oder wenn man die Performance eines
 			 Compute Devices automatisiert messen m"ochte.
  \item Der Overhead f"ur die Initialisierung und den Start eines OpenCL Kernels
 			 kann aber im Vergleich zur Arbeitszeit eines Kernels sehr gross sein. Diese
