Integration SOR und OpenFOAM

--- a/skript/openfoam/OpenFOAM.bib
+++ b/skript/openfoam/OpenFOAM.bib
@@ -1,7 +1,9 @@
-@online{wiki,
+
+@online{ofwiki,
 	URL = {http://en.wikipedia.org},
 	TITLE = {Wikipedia}
 }
+
 @online{of,
 	URL = {http://www.openfoam.org},
 	TITLE = {OpenFOAM Webseite}
