--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -32,6 +32,8 @@
 \usepackage{subfigure}
 \usepackage{csquotes}
 \usepackage{float}
+\usepackage{wrapfig}
+\usepackage{enumitem}
 %\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
 \usetikzlibrary{calc,intersections,through,backgrounds,graphs,positioning,shapes,arrows}
 \usetikzlibrary{patterns,decorations.pathreplacing}
@@ -68,8 +70,10 @@
 \addbibresource{crypto/crypto.bib}
 \addbibresource{julia/julia.bib}
 \addbibresource{apfel/apfelmaennchen.bib}
+\addbibresource{openfoam/OpenFOAM.bib}
 \addbibresource{mapreduce/map.bib}
 \addbibresource{montecarlo/MonteCarlo.bib}
+\addbibresource{sor/sor.bib}
 \addbibresource{green/quellen.bib}
 \addbibresource{stosswellen/stoss.bib}
 \AtEndDocument{\clearpage\ifodd\value{page}\else\null\clearpage\fi}
@@ -198,9 +202,11 @@ Hochschule f"ur Technik, Rapperswil, 2014
 \input crypto/crypto.tex
 \input julia/julia.tex
 \input apfel/apfelmaennchenInput.tex
+\input openfoam/OpenFOAM.tex
 \input mapreduce/mapreduce.tex
 \input montecarlo/MonteCarlo.tex
 \input heat/heat.tex
+\input sor/sorInput.tex
 \input potential/potential.tex
 \input green/green.tex
 \input stosswellen/stosswellen.tex
