--- a/skript/openfoam/OpenFOAM.tex
+++ b/skript/openfoam/OpenFOAM.tex
@@ -256,8 +256,10 @@ Ordnern. Wenn man keine Ver"anderungen der grunds"atzlichen Situation
 w"ahrend der zu simulierenden Zeit machen will, muss man lediglich einen
 Ordner  \texttt{0} erstellen. In diesem Ordner wird alles definiert,
 was w"ahrend der Simulation nicht "andert. Im Beispiel Cavity sind die
-Variablen  \texttt{p} und  \texttt{U} vordefiniert. Im File p wird der
-Anfangsdruck und im File U die Anfangsgeschwindigkeit bestimmt. Wenn man
+Variablen  \texttt{p} und  \texttt{U} vordefiniert.
+Im File \texttt{p} wird der
+Anfangsdruck und im File \texttt{U} die Anfangsgeschwindigkeit bestimmt.
+Wenn man
 nun noch eine Ver"anderung w"ahrend der Simulation erreichen will, so
 m"usste man das entsprechende Verzeichnis erstellen und die Ver"anderung
 darin definieren.
